[gd_scene load_steps=7 format=3 uid="uid://bvpcbvh00w1t7"]

[ext_resource type="Texture2D" uid="uid://c6upu0qpipumg" path="res://assets/shield/spr_shield_small.png" id="1_jvix6"]
[ext_resource type="Script" path="res://Scenes/Shield/shield.gd" id="1_srilx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3teft"]
radius = 32.5576

[sub_resource type="Animation" id="Animation_r6g5f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShieldSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ja3y6"]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShieldSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.726289, 0.178455, 0.251112, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xlo78"]
_data = {
"RESET": SubResource("Animation_r6g5f"),
"hit": SubResource("Animation_ja3y6")
}

[node name="Shield" type="Area2D"]
collision_mask = 10
script = ExtResource("1_srilx")

[node name="ShieldSprite" type="Sprite2D" parent="."]
position = Vector2(0, -1)
rotation = -1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_jvix6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3teft")

[node name="Sound" type="AudioStreamPlayer2D" parent="."]

[node name="ShieldDuration" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="ShieldAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xlo78")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ShieldDuration" to="." method="_on_shield_duration_timeout"]
